# IGVC_laneKeeping

./: README.md
ece6460_ekf_example/src/: EkfExample.cpp  EkfExample.hpp
igvc_self_drive_sim/igvc_self_drive_description/urdf/: gem_sensors.urdf.xacro
igvc_self_drive_sim/igvc_self_drive_description/urdf/sensors/: camera.urdf.xacro
igvc_self_drive_sim/igvc_self_drive_gazebo/launch/: line_following_gazebo.launch  load_task_world.launch
igvc_self_drive_sim/igvc_self_drive_gazebo/models/one_way_right/: model.sdf
igvc_self_drive_sim/igvc_self_drive_gazebo/worlds/: line_following_testing.world  line_following_testingV2.world
igvc_self_drive_sim/igvc_self_drive_gazebo/yaml/: test_world.yaml
lane_detection_test/: CMakeLists.txt  package.xml
lane_detection_test/cfg/: LaneDetection.cfg
lane_detection_test/launch/: lane_detection.launch
lane_detection_test/rviz/: all_system_Gazebo.rviz
lane_detection_test/src/: LaneDetection.cpp
line_following/: CMakeLists.txt  package.xml
line_following/Error_data/bag files/: p0.5_d2.bag  p0.9_d2.bag  p0.9_d3.bag  p1_d1.8.bag
line_following/Error_data/error_csv_data/: error_data_p0.5_d2.csv  error_data_p0.9_d2.csv  error_data_p0.9_d3.csv  error_data_p1.4_d2.csv  error_data_p1_d1.8.csv  subplot_csv.py
line_following/cfg/: Lane_following.cfg
line_following/launch/: test_line_following_circle_road.launch  test_line_following_q2.launch
line_following/src/: bezier.hpp  gps_sim_project.cpp  line_following.cpp  line_following.hpp  line_following_node.cpp
